# node-addon-template

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  SKILL.md  binding.gyp  build.bat  index.d.ts  index.js  package.json  pnpm-lock.yaml  test.js
__test__/: addon.test.js  test.js
scripts/: cmake-js-msvc.ps1
src/: addon.cpp  utils.h
